edited css file to center the footer

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .my-style {
     color: hotpink;
     background-color: black;
-    padding: 3px;   
+    padding: 3px;  
+    text-align: center; 
 }
